automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -117,12 +117,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Hey there hot stu"
+    "Hey there hot `stuff`"
    ]
   },
   {
